# BWgigiBot

./: .gitignore  CMakeLists.txt  README.md
Source/: DataExport.h  Dll.cpp  MyAIModule.cpp  MyAIModule.h
Source/simulator/: .ycm_extra_conf.py  action.cpp  action.h  bwdata.cpp  bwdata.h  bwmap.h  bwunits.cpp  bwunits.h  player.cpp  player.h  test_sim.cpp  webdata.h
